package org.csc133.a2;

//used to change heading for applicable objects after created
public interface ISteerable {
    //public void changeHeading();
}
